--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "YarL03",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.6.4"
   },
   "devDependencies": {
