--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix front && npm run build --prefix front"
   },
   "author": "YarL03",
+  "engines": {
+    "node": "16.13.2"
+  },
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
